<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stationFromRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_station_recycler"
                tools:text="@string/station_from" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeFromRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/time_from" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stationToRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_station_recycler"
                tools:text="@string/station_to" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeToRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/time_to" />

        </LinearLayout>


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
